src/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

/* :root {
  --clr-1: #e0e2db;
  --clr-2: #191716;
  --clr-3: #e6af2e;
} */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
  /* border: 1px dashed red; */
  scroll-behavior: smooth;
  /* border: 1px dashed red; */
}

body {
  min-height: 100vh;
  display: grid;
  place-items: center;
  display: grid;
  place-items: center;
  font-family: "Roboto", sans-serif;
  background-color: var(--clr-1);
}

body.light {
  --clr-1: #e0e2db;
  --clr-2: #191716;
  --clr-3: #e6af2e;
}

body.dark {
  --clr-1: #191716;
  --clr-2: #e0e2db;
  --clr-3: #e6af2e;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.icon {
  fill: var(--clr-2);
}

.theme-toggle {
  width: 4rem;
  height: 2rem;
  border-radius: 5rem;
  background-color: var(--clr-2);
  position: relative;
  cursor: pointer;
}

.theme-toggle::after {
  content: "";
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  top: 50%;
  left: 25%;
  transform: translate(-50%, -50%);
  border-radius: 5rem;
  background-color: var(--clr-1);
  transition: all 0.3s linear;
}

body.dark .theme-toggle::after {
  left: 75%;
}

.calculator {
  width: 25rem;
  display: grid;
  gap: 1rem;
}

.display {
  width: 100%;
  display: grid;
  justify-content: flex-end;
  font-size: 2rem;
  color: var(--clr-2);
}

.display > * {
  overflow: scroll;
  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
}

.expression {
  min-height: 1.25em;
  display: flex;
  justify-content: flex-end;
  gap: 0.25rem;
}

.expression .symbol {
  color: var(--clr-3);
}

.result {
  text-align: end;
  font-size: 4rem;
  font-weight: bold;
}

.buttons {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
}

.button {
  aspect-ratio: 1;
  border: none;
  border-radius: 5rem;
  font-size: 2rem;
  color: var(--clr-1);
  background-color: var(--clr-2);
  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
  text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.button:hover {
  transform: scale(1.1);
}

.button:active {
  transform: scale(0.98);
}

.button.accent {
  color: var(--clr-2);
  background-color: var(--clr-3);
}

body.dark .button.accent {
  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
}

.button.equals {
  aspect-ratio: auto;
  grid-column: span 2;
}

.hidden {
  display: none;
}

@media (width < 600px) {
  .calculator {
    width: 90vw;
  }
}

